PruebaRa/obj/Debug/MyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\users\juan miguel\documents\visual studio 2013\Projects\PruebaRa\PruebaRa\MyParser.g4 by ANTLR 4.5-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace PruebaRa {

using System;

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class MyParser : Parser {
	public const int
		WS=1, NEWLINE=2, TAB=3, BREAK=4, CLASS=5, CONST=6, ELSE=7, IF=8, NEW=9, 
		TRUE=10, FALSE=11, READ=12, RETURN=13, VOID=14, WHILE=15, WRITE=16, FOREACH=17, 
		FOR=18, PyCOMA=19, COMA=20, IGUAL=21, IGUALIGUAL=22, DIF=23, PIZQ=24, 
		PDER=25, SUMA=26, MASMAS=27, MUL=28, MENOS=29, MENOSMENOS=30, DIV=31, 
		EXCLA=32, NUMERAL=33, DOLAR=34, PORCEN=35, AMP=36, AMPAMP=37, PUNTO=38, 
		MENORQ=39, MENORIGUAL=40, MAYORQ=41, MAYORIGUAL=42, PREG=43, ARROBA=44, 
		GUIOBAJO=45, SQUOTE=46, VERTICAL=47, VERTICALVERTICAL=48, CORDER=49, CORIZQ=50, 
		CUADDER=51, CUADIZQ=52, COMENT=53, COMENTBLOCK1=54, COMENTBLOCK2=55, NUM=56, 
		ID=57, PRINTABLECHAR=58, CHARCONST=59, COMENTARIO=60, COMENTARIOBLOQUE=61, 
		STR=62, LQUOTE=63, MAS=64;
	public const int
		RULE_program = 0, RULE_consDecl = 1, RULE_varDecl = 2, RULE_classDecl = 3, 
		RULE_methodDecl = 4, RULE_formPars = 5, RULE_type = 6, RULE_statement = 7, 
		RULE_block = 8, RULE_actPars = 9, RULE_condition = 10, RULE_condterm = 11, 
		RULE_condFact = 12, RULE_expr = 13, RULE_term = 14, RULE_factor = 15, 
		RULE_designator = 16, RULE_relop = 17, RULE_addop = 18, RULE_mulop = 19;
	public static readonly string[] ruleNames = {
		"program", "consDecl", "varDecl", "classDecl", "methodDecl", "formPars", 
		"type", "statement", "block", "actPars", "condition", "condterm", "condFact", 
		"expr", "term", "factor", "designator", "relop", "addop", "mulop"
	};

	private static readonly string[] _LiteralNames = {
		null, "' '", null, "'\t'", "'break'", "'class'", "'const'", "'else'", 
		"'if'", "'new'", "'true'", "'false'", "'read'", "'return'", "'void'", 
		"'while'", "'write'", "'foreach'", "'for'", "';'", "','", "'='", "'=='", 
		"'!='", "'('", "')'", "'+'", "'++'", "'*'", "'-'", "'--'", "'/'", "'!'", 
		"'#'", "'$'", "'%'", "'&'", "'&&'", "'.'", "'<'", "'<='", "'>'", "'>='", 
		"'?'", "'@'", "'_'", "'''", "'|'", "'||'", "'}'", "'{'", "']'", "'['", 
		null, "'/*'", "'*/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "NEWLINE", "TAB", "BREAK", "CLASS", "CONST", "ELSE", "IF", 
		"NEW", "TRUE", "FALSE", "READ", "RETURN", "VOID", "WHILE", "WRITE", "FOREACH", 
		"FOR", "PyCOMA", "COMA", "IGUAL", "IGUALIGUAL", "DIF", "PIZQ", "PDER", 
		"SUMA", "MASMAS", "MUL", "MENOS", "MENOSMENOS", "DIV", "EXCLA", "NUMERAL", 
		"DOLAR", "PORCEN", "AMP", "AMPAMP", "PUNTO", "MENORQ", "MENORIGUAL", "MAYORQ", 
		"MAYORIGUAL", "PREG", "ARROBA", "GUIOBAJO", "SQUOTE", "VERTICAL", "VERTICALVERTICAL", 
		"CORDER", "CORIZQ", "CUADDER", "CUADIZQ", "COMENT", "COMENTBLOCK1", "COMENTBLOCK2", 
		"NUM", "ID", "PRINTABLECHAR", "CHARCONST", "COMENTARIO", "COMENTARIOBLOQUE", 
		"STR", "LQUOTE", "MAS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MyParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MyParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode CLASS() { return GetToken(MyParser.CLASS, 0); }
		public ITerminalNode ID() { return GetToken(MyParser.ID, 0); }
		public ITerminalNode CORIZQ() { return GetToken(MyParser.CORIZQ, 0); }
		public ITerminalNode CORDER() { return GetToken(MyParser.CORDER, 0); }
		public ConsDeclContext[] consDecl() {
			return GetRuleContexts<ConsDeclContext>();
		}
		public ConsDeclContext consDecl(int i) {
			return GetRuleContext<ConsDeclContext>(i);
		}
		public VarDeclContext[] varDecl() {
			return GetRuleContexts<VarDeclContext>();
		}
		public VarDeclContext varDecl(int i) {
			return GetRuleContext<VarDeclContext>(i);
		}
		public ClassDeclContext[] classDecl() {
			return GetRuleContexts<ClassDeclContext>();
		}
		public ClassDeclContext classDecl(int i) {
			return GetRuleContext<ClassDeclContext>(i);
		}
		public MethodDeclContext[] methodDecl() {
			return GetRuleContexts<MethodDeclContext>();
		}
		public MethodDeclContext methodDecl(int i) {
			return GetRuleContext<MethodDeclContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; Match(CLASS);
			State = 41; Match(ID);
			State = 47;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << CONST) | (1L << ID))) != 0)) {
				{
				State = 45;
				switch (_input.La(1)) {
				case CONST:
					{
					State = 42; consDecl();
					}
					break;
				case ID:
					{
					State = 43; varDecl();
					}
					break;
				case CLASS:
					{
					State = 44; classDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 49;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 50; Match(CORIZQ);
			State = 54;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==VOID || _la==ID) {
				{
				{
				State = 51; methodDecl();
				}
				}
				State = 56;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 57; Match(CORDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConsDeclContext : ParserRuleContext {
		public ITerminalNode CONST() { return GetToken(MyParser.CONST, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode ID() { return GetToken(MyParser.ID, 0); }
		public ITerminalNode IGUAL() { return GetToken(MyParser.IGUAL, 0); }
		public ITerminalNode PyCOMA() { return GetToken(MyParser.PyCOMA, 0); }
		public ITerminalNode NUM() { return GetToken(MyParser.NUM, 0); }
		public ITerminalNode CHARCONST() { return GetToken(MyParser.CHARCONST, 0); }
		public ConsDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_consDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterConsDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitConsDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConsDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConsDeclContext consDecl() {
		ConsDeclContext _localctx = new ConsDeclContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_consDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59; Match(CONST);
			State = 60; type();
			State = 61; Match(ID);
			State = 62; Match(IGUAL);
			State = 63;
			_la = _input.La(1);
			if ( !(_la==NUM || _la==CHARCONST) ) {
			_errHandler.RecoverInline(this);
			} else {
				Consume();
			}
			State = 64; Match(PyCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarDeclContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode[] ID() { return GetTokens(MyParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(MyParser.ID, i);
		}
		public ITerminalNode PyCOMA() { return GetToken(MyParser.PyCOMA, 0); }
		public ITerminalNode[] COMA() { return GetTokens(MyParser.COMA); }
		public ITerminalNode COMA(int i) {
			return GetToken(MyParser.COMA, i);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterVarDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitVarDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarDeclContext varDecl() {
		VarDeclContext _localctx = new VarDeclContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_varDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; type();
			State = 67; Match(ID);
			State = 72;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMA) {
				{
				{
				State = 68; Match(COMA);
				State = 69; Match(ID);
				}
				}
				State = 74;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 75; Match(PyCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDeclContext : ParserRuleContext {
		public ITerminalNode CLASS() { return GetToken(MyParser.CLASS, 0); }
		public ITerminalNode ID() { return GetToken(MyParser.ID, 0); }
		public ITerminalNode CORIZQ() { return GetToken(MyParser.CORIZQ, 0); }
		public ITerminalNode CORDER() { return GetToken(MyParser.CORDER, 0); }
		public VarDeclContext[] varDecl() {
			return GetRuleContexts<VarDeclContext>();
		}
		public VarDeclContext varDecl(int i) {
			return GetRuleContext<VarDeclContext>(i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterClassDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitClassDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDeclContext classDecl() {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_classDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77; Match(CLASS);
			State = 78; Match(ID);
			State = 79; Match(CORIZQ);
			State = 83;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==ID) {
				{
				{
				State = 80; varDecl();
				}
				}
				State = 85;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 86; Match(CORDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodDeclContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(MyParser.ID, 0); }
		public ITerminalNode PIZQ() { return GetToken(MyParser.PIZQ, 0); }
		public ITerminalNode PDER() { return GetToken(MyParser.PDER, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode VOID() { return GetToken(MyParser.VOID, 0); }
		public FormParsContext formPars() {
			return GetRuleContext<FormParsContext>(0);
		}
		public VarDeclContext[] varDecl() {
			return GetRuleContexts<VarDeclContext>();
		}
		public VarDeclContext varDecl(int i) {
			return GetRuleContext<VarDeclContext>(i);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_methodDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterMethodDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitMethodDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodDeclContext methodDecl() {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_methodDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			switch (_input.La(1)) {
			case ID:
				{
				State = 88; type();
				}
				break;
			case VOID:
				{
				State = 89; Match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 92; Match(ID);
			State = 93; Match(PIZQ);
			State = 96;
			switch (_input.La(1)) {
			case ID:
				{
				State = 94; formPars();
				}
				break;
			case PDER:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 98; Match(PDER);
			State = 102;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==ID) {
				{
				{
				State = 99; varDecl();
				}
				}
				State = 104;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 105; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormParsContext : ParserRuleContext {
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public ITerminalNode[] ID() { return GetTokens(MyParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(MyParser.ID, i);
		}
		public ITerminalNode[] COMA() { return GetTokens(MyParser.COMA); }
		public ITerminalNode COMA(int i) {
			return GetToken(MyParser.COMA, i);
		}
		public FormParsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formPars; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterFormPars(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitFormPars(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormPars(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormParsContext formPars() {
		FormParsContext _localctx = new FormParsContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_formPars);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; type();
			State = 108; Match(ID);
			State = 115;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMA) {
				{
				{
				State = 109; Match(COMA);
				State = 110; type();
				State = 111; Match(ID);
				}
				}
				State = 117;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(MyParser.ID, 0); }
		public ITerminalNode CUADIZQ() { return GetToken(MyParser.CUADIZQ, 0); }
		public ITerminalNode CUADDER() { return GetToken(MyParser.CUADDER, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_type);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118; Match(ID);
			State = 122;
			switch (_input.La(1)) {
			case CUADIZQ:
				{
				State = 119; Match(CUADIZQ);
				State = 120; Match(CUADDER);
				}
				break;
			case ID:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public DesignatorContext designator() {
			return GetRuleContext<DesignatorContext>(0);
		}
		public ITerminalNode[] PyCOMA() { return GetTokens(MyParser.PyCOMA); }
		public ITerminalNode PyCOMA(int i) {
			return GetToken(MyParser.PyCOMA, i);
		}
		public ITerminalNode IGUAL() { return GetToken(MyParser.IGUAL, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode PIZQ() { return GetToken(MyParser.PIZQ, 0); }
		public ITerminalNode PDER() { return GetToken(MyParser.PDER, 0); }
		public ITerminalNode MASMAS() { return GetToken(MyParser.MASMAS, 0); }
		public ITerminalNode MENOSMENOS() { return GetToken(MyParser.MENOSMENOS, 0); }
		public ActParsContext actPars() {
			return GetRuleContext<ActParsContext>(0);
		}
		public ITerminalNode IF() { return GetToken(MyParser.IF, 0); }
		public ConditionContext condition() {
			return GetRuleContext<ConditionContext>(0);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode ELSE() { return GetToken(MyParser.ELSE, 0); }
		public ITerminalNode FOR() { return GetToken(MyParser.FOR, 0); }
		public ITerminalNode WHILE() { return GetToken(MyParser.WHILE, 0); }
		public ITerminalNode BREAK() { return GetToken(MyParser.BREAK, 0); }
		public ITerminalNode RETURN() { return GetToken(MyParser.RETURN, 0); }
		public ITerminalNode READ() { return GetToken(MyParser.READ, 0); }
		public ITerminalNode WRITE() { return GetToken(MyParser.WRITE, 0); }
		public ITerminalNode COMA() { return GetToken(MyParser.COMA, 0); }
		public ITerminalNode NUM() { return GetToken(MyParser.NUM, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_statement);
		try {
			State = 198;
			switch (_input.La(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 124; designator();
				State = 135;
				switch (_input.La(1)) {
				case IGUAL:
					{
					State = 125; Match(IGUAL);
					State = 126; expr();
					}
					break;
				case PIZQ:
					{
					State = 127; Match(PIZQ);
					State = 130;
					switch (_input.La(1)) {
					case NEW:
					case TRUE:
					case FALSE:
					case PIZQ:
					case MENOS:
					case NUM:
					case ID:
					case CHARCONST:
						{
						State = 128; actPars();
						}
						break;
					case PDER:
						{
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 132; Match(PDER);
					}
					break;
				case MASMAS:
					{
					State = 133; Match(MASMAS);
					}
					break;
				case MENOSMENOS:
					{
					State = 134; Match(MENOSMENOS);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 137; Match(PyCOMA);
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 2);
				{
				State = 139; Match(IF);
				State = 140; Match(PIZQ);
				State = 141; condition();
				State = 142; Match(PDER);
				State = 143; statement();
				State = 147;
				switch ( Interpreter.AdaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					State = 144; Match(ELSE);
					State = 145; statement();
					}
					break;

				case 2:
					{
					}
					break;
				}
				}
				break;
			case FOR:
				EnterOuterAlt(_localctx, 3);
				{
				State = 149; Match(FOR);
				State = 150; Match(PIZQ);
				State = 151; expr();
				State = 152; Match(PyCOMA);
				State = 155;
				switch (_input.La(1)) {
				case NEW:
				case TRUE:
				case FALSE:
				case PIZQ:
				case MENOS:
				case NUM:
				case ID:
				case CHARCONST:
					{
					State = 153; condition();
					}
					break;
				case PyCOMA:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 157; Match(PyCOMA);
				State = 160;
				switch (_input.La(1)) {
				case BREAK:
				case IF:
				case READ:
				case RETURN:
				case WHILE:
				case WRITE:
				case FOR:
				case PyCOMA:
				case CORIZQ:
				case ID:
					{
					State = 158; statement();
					}
					break;
				case PDER:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 162; Match(PDER);
				State = 163; statement();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 4);
				{
				State = 165; Match(WHILE);
				State = 166; Match(PIZQ);
				State = 167; condition();
				State = 168; Match(PDER);
				State = 169; statement();
				}
				break;
			case BREAK:
				EnterOuterAlt(_localctx, 5);
				{
				State = 171; Match(BREAK);
				State = 172; Match(PyCOMA);
				}
				break;
			case RETURN:
				EnterOuterAlt(_localctx, 6);
				{
				State = 173; Match(RETURN);
				State = 176;
				switch (_input.La(1)) {
				case NEW:
				case TRUE:
				case FALSE:
				case PIZQ:
				case MENOS:
				case NUM:
				case ID:
				case CHARCONST:
					{
					State = 174; expr();
					}
					break;
				case PyCOMA:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 178; Match(PyCOMA);
				}
				break;
			case READ:
				EnterOuterAlt(_localctx, 7);
				{
				State = 179; Match(READ);
				State = 180; Match(PIZQ);
				State = 181; designator();
				State = 182; Match(PDER);
				State = 183; Match(PyCOMA);
				}
				break;
			case WRITE:
				EnterOuterAlt(_localctx, 8);
				{
				State = 185; Match(WRITE);
				State = 186; Match(PIZQ);
				State = 187; expr();
				State = 191;
				switch (_input.La(1)) {
				case COMA:
					{
					State = 188; Match(COMA);
					State = 189; Match(NUM);
					}
					break;
				case PDER:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 193; Match(PDER);
				State = 194; Match(PyCOMA);
				}
				break;
			case CORIZQ:
				EnterOuterAlt(_localctx, 9);
				{
				State = 196; block();
				}
				break;
			case PyCOMA:
				EnterOuterAlt(_localctx, 10);
				{
				State = 197; Match(PyCOMA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
